PREVIEW: prevent wrapped text from becoming cut off by margin

--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@
   height: 100%;
   padding-top: 20px;
   padding-left: 20px;
+  padding-right: 20px;
   font-size: 1.5em;
   font-family: 'SF Pro Display', sans-serif;
   line-height: 1.5em;
@@ -88,10 +89,12 @@
 .result {
   padding-top: 20px;
   padding-left: 20px;
+  padding-right: 20px;
+  overflow-x: hidden;
   font-family: 'SF Pro Display', sans-serif;
   font-size: 1.5em;
   line-height: 1.5em;
-  width: 100%;
+  max-width: 100%;
 }
 
 .preview {
